--- a/RRPowerApp/RRPowerApp.vbproj
+++ b/RRPowerApp/RRPowerApp.vbproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.4.10" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
 </Project>
